# opengl-tutorial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
shaders/: fragment.glsl  post_processing.frag  post_processing.vert  vertex.glsl
src/: App.cpp  App.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Manager.h  Map.h  Object.h  Shader.cpp  Shader.h  glad.c  glad.h  main.cpp
